--- a/Ncryptor.csproj
+++ b/Ncryptor.csproj
@@ -10,6 +10,7 @@
     <Content Include="favicon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
